src/test/resources/failing/fail36.pnd
@text
Foo(x, y) <- number x morethan y
Foo(10, 5)
number number morethan 0